--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-use-validated-input",
-  "version": "0.1.1-1",
+  "version": "0.1.1-2",
   "description": "React hook for using state with validation",
   "main": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "docs": "build-storybook -o docs",
     "dist": "rm -rf dist && babel src --out-dir dist --ignore **/*.test.js --extensions '.js,.ts'",
